<resources>        android:text="@string/my_nanodegree"

    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree">My Nanodegree App!</string>
    <string name="button_spotify_streamer"> spotify streamer</string>
    <string name="button_scores_app">scores app</string>
    <string name="button_libray_app"> Library App</string>
    <string name="button_build_it_bigger"> build it bigger</string>
    <string name="button_xyz_reader"> xyz reader</string>
    <string name="button_capstone">capstone:my own app</string>








</resources>
